added audio on home page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="gameroom.css" />
   </head>
   <body>
+    <audio autoplay loop>
+      <source src="/01. Ground Theme.mp3" type="audio/mp3" />
+    </audio>
     <header>
       <div id="header_wrapper">
         <a href="index.html">
